@@ -1,10 +1,37 @@
 plugins {
     id 'application'
+    id 'idea'
 }
 
 group = 'io.github.jwharm.puzzlegame'
 version = '0.1'
 
+repositories {
+    mavenCentral()
+}
+
+idea.module.downloadSources = true
+
+dependencies {
+    implementation 'io.github.jwharm.javagi:gtk:0.8.1'
+    implementation 'io.github.jwharm.cairobindings:cairo:1.18.1'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+tasks.named('compileJava') {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.named('run') {
+    jvmArgs += "--enable-preview"
+    jvmArgs += "--enable-native-access=ALL-UNNAMED"
+}
+
 application {
-    mainClass = 'io.github.jwharm.Main'
+    mainClass = 'io.github.jwharm.puzzlegame.Main'
 }
